<resources>
    <string name="app_name">Shopgeo</string>
    <string name="roll_label">Roll</string>
    <string name="welcome">Welcome to Shopgeo</string>
    <string name="welcome_user">Welcome %s</string>
    <string name="loginSharedPref">app.shopgeo.in.loginSharedPref</string>
    <string name="product">Product</string>
    <string name="check_login">Please Login to Continue</string>
    <string name="cart_empty">Your Cart is Empty</string>
    <string name="share">Share</string>
    <string name="product_url">https://shopgeo.in/mp/title/%1$d</string>
    <string name="products">Products</string>
    <string name="prod_discount">%d%% off</string>
    <string name="rupee">%s </string>
    <string name="mrp">MRP <del>%s </del></string>
    <string name="rating">%.1f</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="login_status">Login</string>
    <string name="search">Search for products, brands, favourites...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username/Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="update">Update</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="search_title">Search for Products, Brands, favourites etc...</string>
    <string name="msg">Message Shopgeo</string>
    <string name="my_cart">My Cart</string>
    <string name="network_status">Network Status</string>
    <string name="qty">Qty</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="delivery_address">Deliver : %s</string>
    <string name="change">Change</string>
    <string name="add_adress">Add address</string>
    <string name="cart_price">per/%s</string>
    <string name="cart_total_price">Total Cost: %s</string>
    <string name="checkout">Checkout</string>
    <string name="login_failed">Username or Password is Incorrect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="my_offers">My Offers</string>
    <string name="my_orders">My Orders</string>
    <string name="our_legals">Our Legals</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="return_policy">Refund and Return Policy</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="orderId">Order ID: %s</string>
    <string name="payId">Payment ID: %s</string>
    <string name="paymode">Payment Mode: %s</string>
    <string name="orderDate">Order Date: %s</string>
    <string name="logout">LogOut</string>
    <string name="edit_phone">edit phone</string>
    <string name="edit_name">edit name</string>
    <string name="edit_email">edit email</string>
    <string name="profile_image">profile image</string>
    <string name="cancel">Cancel</string>
    <string name="send_otp">Send OTP</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="login">Login</string>
    <string name="notification_channel_offers">NOTIFICATION_OFFERS</string>
    <string name="notification_channel_id_offers">0</string>
</resources>